# NWAvalanche

./: .gitignore  CLAUDE.md  README.md  WORKPLAN.md  pyproject.toml
docs/: api_exploration.md
scripts/: api_recon.py
src/: clock.py  render.py  schema.py  zones.py
src/fetchers/: nac_api.py  nws_api.py
src/pipelines/: daily_post.py
src/products/: avalanche_forecast.py  base.py  mountain_weather.py  nws_weather.py  route_guidance.py
tests/: test_avalanche_forecast.py  test_freshness.py  test_nws_weather.py  test_render.py  test_zones.py
tests/fixtures/: forecast_snoqualmie_185078.json
tests/fixtures/nws/: forecast_stevens.json  hourly_stevens.json  points_stevens.json
